--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,55 @@
     transition: 5s
 }
 
+.flex__cards{
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 6rem;
+    margin: 2.5em 0;
+}
+.card{
+    flex: 1;
+}
+.card__img{
+    width: 100%;
+}
+
+.card__headline{
+    color: white;
+    font-size: 2.5rem;
+    display: flex;
+    align-items: center;
+    margin: .6em 0 .2em;
+}
+
+.card__arrow{
+    margin-left: .5em;
+}
+
+.top{
+    top: -50rem;
+}
+
+
+@media only screen and (max-width: 850px) and (min-width:640px){
+
+    .flex__logo{
+        flex-wrap: wrap;
+        margin: 0 2em;
+    }
+
+    .flex__logo img{
+        width: 30%;
+    }
+}
+    @media only screen and (max-width: 850px) {
+
+  .flex__cards{
+    flex-direction: column;
+    gap: 4rem;
+}
+}
+
 @media only screen and (width: 768px){
     .container{
         padding: 0 2em;
@@ -31,6 +80,10 @@
     .flex__logo img{
         max-width: 50%
     }
+}
+
+p, a{
+    font-family: sans-serif
 }
 
 @tailwind base;
